{
  "version": 4,
  "terraform_version": "1.3.7",
  "serial": 590,
  "lineage": "452b52c3-a024-c357-cfd0-cc0179016c51",
  "resources": [
    {
      "module": "module.SG",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "SG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:997979121770:security-group/sg-0c5daab15a829ab93",
            "description": "Allow HTTP and SSH traffic via Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c5daab15a829ab93",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "nagy-SG",
            "name_prefix": "",
            "owner_id": "997979121770",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-091d4e6f12a0f6c1d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc-iti.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.ec2-p1",
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-00874d747dde814fa",
            "arn": "arn:aws:ec2:us-east-1:997979121770:instance/i-057a45c4090e2d334",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-057a45c4090e2d334",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "nagy",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0d8aa98d489ed4639",
            "private_dns": "ip-10-0-0-20.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.20",
            "public_ip": "52.4.140.214",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-06529ce71ac1986ab",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-02963679913f9a1d3",
            "tags": {
              "Name": "public-proxy1"
            },
            "tags_all": {
              "Name": "public-proxy1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0c5daab15a829ab93"
            ]
          },
          "dependencies": [
            "module.SG.aws_security_group.SG",
            "module.private-LB.aws_lb.pub-LB",
            "module.subnet-priv-1.aws_subnet.subnet-private",
            "module.subnet-priv-2.aws_subnet.subnet-private",
            "module.subnet-pub-1.aws_subnet.myvpc_subnet",
            "module.vpc-iti.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.ec2-p2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-00874d747dde814fa",
            "arn": "arn:aws:ec2:us-east-1:997979121770:instance/i-05cae17b138115989",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-05cae17b138115989",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "nagy",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-05495c03738f43fa4",
            "private_dns": "ip-10-0-2-58.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.58",
            "public_ip": "3.80.91.95",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0a664ae777c852738",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0756c12047dbb71b0",
            "tags": {
              "Name": "public-proxy1"
            },
            "tags_all": {
              "Name": "public-proxy1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0c5daab15a829ab93"
            ]
          },
          "dependencies": [
            "module.SG.aws_security_group.SG",
            "module.private-LB.aws_lb.pub-LB",
            "module.subnet-priv-1.aws_subnet.subnet-private",
            "module.subnet-priv-2.aws_subnet.subnet-private",
            "module.subnet-pub-2.aws_subnet.myvpc_subnet",
            "module.vpc-iti.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.ec2-priv1",
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0b5eea76982371e91",
            "arn": "arn:aws:ec2:us-east-1:997979121770:instance/i-0a57553a8d767a177",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a57553a8d767a177",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "nagy",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-096d5b329ab0affae",
            "private_dns": "ip-10-0-4-106.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.4.106",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-057bea4ab9115bea4",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0bc0ac305c38768f6",
            "tags": {
              "Name": "private-m1"
            },
            "tags_all": {
              "Name": "private-m1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0c5daab15a829ab93"
            ]
          },
          "dependencies": [
            "module.SG.aws_security_group.SG",
            "module.subnet-priv-2.aws_subnet.subnet-private",
            "module.vpc-iti.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.ec2-priv2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0b5eea76982371e91",
            "arn": "arn:aws:ec2:us-east-1:997979121770:instance/i-02dd4d6431aa81252",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-02dd4d6431aa81252",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "nagy",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-037de7ae55deb11b9",
            "private_dns": "ip-10-0-3-220.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.3.220",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0885f8841d1f1efc1",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-080d14ecfc16055b5",
            "tags": {
              "Name": "private-m2"
            },
            "tags_all": {
              "Name": "private-m2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0c5daab15a829ab93"
            ]
          },
          "dependencies": [
            "module.SG.aws_security_group.SG",
            "module.subnet-priv-1.aws_subnet.subnet-private",
            "module.vpc-iti.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.gatways",
      "mode": "managed",
      "type": "aws_eip",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e286b36df5791f0f",
            "association_id": "eipassoc-030b0491ec25e0d30",
            "domain": "vpc",
            "id": "eipalloc-0e286b36df5791f0f",
            "network_border_group": "us-east-1",
            "network_interface": "eni-064f6adddd46edaf2",
            "private_dns": "ip-10-0-0-229.ec2.internal",
            "private_ip": "10.0.0.229",
            "public_dns": "ec2-3-213-24-5.compute-1.amazonaws.com",
            "public_ip": "3.213.24.5",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.gatways",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:997979121770:internet-gateway/igw-004a9787215f1219c",
            "id": "igw-004a9787215f1219c",
            "owner_id": "997979121770",
            "vpc_id": "vpc-091d4e6f12a0f6c1d"
          },
          "dependencies": [
            "module.vpc-iti.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.gatways",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e286b36df5791f0f",
            "connectivity_type": "public",
            "id": "nat-091deb8a239337163",
            "network_interface_id": "eni-064f6adddd46edaf2",
            "private_ip": "10.0.0.229",
            "public_ip": "3.213.24.5",
            "subnet_id": "subnet-02963679913f9a1d3"
          },
          "dependencies": [
            "module.gatways.aws_eip.example",
            "module.subnet-pub-1.aws_subnet.myvpc_subnet",
            "module.vpc-iti.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.private-LB",
      "mode": "managed",
      "type": "aws_lb",
      "name": "pub-LB",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:997979121770:loadbalancer/app/priv-LB/b5b9c35399a84a1c",
            "arn_suffix": "app/priv-LB/b5b9c35399a84a1c",
            "desync_mitigation_mode": "defensive",
            "dns_name": "priv-LB-819559229.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:997979121770:loadbalancer/app/priv-LB/b5b9c35399a84a1c",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "priv-LB",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0c5daab15a829ab93"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-080d14ecfc16055b5"
              },
              {
                "subnet_id": "subnet-0bc0ac305c38768f6"
              }
            ],
            "subnets": [
              "subnet-080d14ecfc16055b5",
              "subnet-0bc0ac305c38768f6"
            ],
            "vpc_id": "vpc-091d4e6f12a0f6c1d",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "module.SG.aws_security_group.SG",
            "module.subnet-priv-1.aws_subnet.subnet-private",
            "module.subnet-priv-2.aws_subnet.subnet-private",
            "module.vpc-iti.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.private-LB",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:997979121770:listener/app/priv-LB/b5b9c35399a84a1c/5795e061ac4d8801",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:997979121770:targetgroup/priv-tg/2fd4c717327a97b2",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:997979121770:listener/app/priv-LB/b5b9c35399a84a1c/5795e061ac4d8801",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:997979121770:loadbalancer/app/priv-LB/b5b9c35399a84a1c",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.SG.aws_security_group.SG",
            "module.private-LB.aws_lb.pub-LB",
            "module.private-LB.aws_lb_target_group.public-target-group",
            "module.subnet-priv-1.aws_subnet.subnet-private",
            "module.subnet-priv-2.aws_subnet.subnet-private",
            "module.vpc-iti.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.private-LB",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "public-target-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:997979121770:targetgroup/priv-tg/2fd4c717327a97b2",
            "arn_suffix": "targetgroup/priv-tg/2fd4c717327a97b2",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:997979121770:targetgroup/priv-tg/2fd4c717327a97b2",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "priv-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-091d4e6f12a0f6c1d"
          },
          "dependencies": [
            "module.vpc-iti.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.private-LB",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "attach-pub-ec2-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:997979121770:targetgroup/priv-tg/2fd4c717327a97b2-20230126210027174700000002",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:997979121770:targetgroup/priv-tg/2fd4c717327a97b2",
            "target_id": "i-0a57553a8d767a177"
          },
          "dependencies": [
            "module.SG.aws_security_group.SG",
            "module.ec2-priv1.aws_instance.ec2",
            "module.private-LB.aws_lb_target_group.public-target-group",
            "module.subnet-priv-2.aws_subnet.subnet-private",
            "module.vpc-iti.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.private-LB",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "attach-pub-ec2-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:997979121770:targetgroup/priv-tg/2fd4c717327a97b2-20230126210159461600000004",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:997979121770:targetgroup/priv-tg/2fd4c717327a97b2",
            "target_id": "i-02dd4d6431aa81252"
          },
          "dependencies": [
            "module.SG.aws_security_group.SG",
            "module.ec2-priv2.aws_instance.ec2",
            "module.private-LB.aws_lb_target_group.public-target-group",
            "module.subnet-priv-1.aws_subnet.subnet-private",
            "module.vpc-iti.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.public-LB",
      "mode": "managed",
      "type": "aws_lb",
      "name": "pub-LB",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:997979121770:loadbalancer/app/pub-LB/f08fa94b42d40937",
            "arn_suffix": "app/pub-LB/f08fa94b42d40937",
            "desync_mitigation_mode": "defensive",
            "dns_name": "pub-LB-1590482744.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:997979121770:loadbalancer/app/pub-LB/f08fa94b42d40937",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "pub-LB",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0c5daab15a829ab93"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-02963679913f9a1d3"
              },
              {
                "subnet_id": "subnet-0756c12047dbb71b0"
              }
            ],
            "subnets": [
              "subnet-02963679913f9a1d3",
              "subnet-0756c12047dbb71b0"
            ],
            "vpc_id": "vpc-091d4e6f12a0f6c1d",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "module.SG.aws_security_group.SG",
            "module.subnet-pub-1.aws_subnet.myvpc_subnet",
            "module.subnet-pub-2.aws_subnet.myvpc_subnet",
            "module.vpc-iti.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.public-LB",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:997979121770:listener/app/pub-LB/f08fa94b42d40937/670dcc6457d0628f",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:997979121770:targetgroup/pub-tg/577fec654e85c027",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:997979121770:listener/app/pub-LB/f08fa94b42d40937/670dcc6457d0628f",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:997979121770:loadbalancer/app/pub-LB/f08fa94b42d40937",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.SG.aws_security_group.SG",
            "module.public-LB.aws_lb.pub-LB",
            "module.public-LB.aws_lb_target_group.public-target-group",
            "module.subnet-pub-1.aws_subnet.myvpc_subnet",
            "module.subnet-pub-2.aws_subnet.myvpc_subnet",
            "module.vpc-iti.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.public-LB",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "public-target-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:997979121770:targetgroup/pub-tg/577fec654e85c027",
            "arn_suffix": "targetgroup/pub-tg/577fec654e85c027",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:997979121770:targetgroup/pub-tg/577fec654e85c027",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "pub-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-091d4e6f12a0f6c1d"
          },
          "dependencies": [
            "module.vpc-iti.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.public-LB",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "attach-pub-ec2-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:997979121770:targetgroup/pub-tg/577fec654e85c027-20230125232241947300000009",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:997979121770:targetgroup/pub-tg/577fec654e85c027",
            "target_id": "i-057a45c4090e2d334"
          },
          "dependencies": [
            "module.SG.aws_security_group.SG",
            "module.ec2-p1.aws_instance.ec2",
            "module.private-LB.aws_lb.pub-LB",
            "module.public-LB.aws_lb_target_group.public-target-group",
            "module.subnet-priv-1.aws_subnet.subnet-private",
            "module.subnet-priv-2.aws_subnet.subnet-private",
            "module.subnet-pub-1.aws_subnet.myvpc_subnet",
            "module.vpc-iti.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.public-LB",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "attach-pub-ec2-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:997979121770:targetgroup/pub-tg/577fec654e85c027-20230125232222378600000008",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:997979121770:targetgroup/pub-tg/577fec654e85c027",
            "target_id": "i-05cae17b138115989"
          },
          "dependencies": [
            "module.SG.aws_security_group.SG",
            "module.ec2-p2.aws_instance.ec2",
            "module.private-LB.aws_lb.pub-LB",
            "module.public-LB.aws_lb_target_group.public-target-group",
            "module.subnet-priv-1.aws_subnet.subnet-private",
            "module.subnet-priv-2.aws_subnet.subnet-private",
            "module.subnet-pub-2.aws_subnet.myvpc_subnet",
            "module.vpc-iti.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.subnet-priv-1",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:997979121770:route-table/rtb-02ad8ffdc24663a3e",
            "id": "rtb-02ad8ffdc24663a3e",
            "owner_id": "997979121770",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-091deb8a239337163",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private-RT"
            },
            "tags_all": {
              "Name": "private-RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-091d4e6f12a0f6c1d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.gatways.aws_nat_gateway.nat_gateway",
            "module.vpc-iti.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.subnet-priv-1",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-068713e5cfff85307",
            "route_table_id": "rtb-02ad8ffdc24663a3e",
            "subnet_id": "subnet-080d14ecfc16055b5"
          },
          "dependencies": [
            "module.gatways.aws_eip.example",
            "module.gatways.aws_nat_gateway.nat_gateway",
            "module.subnet-priv-1.aws_route_table.private",
            "module.subnet-priv-1.aws_subnet.subnet-private",
            "module.subnet-pub-1.aws_subnet.myvpc_subnet",
            "module.vpc-iti.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.subnet-priv-1",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet-private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:997979121770:subnet/subnet-080d14ecfc16055b5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-080d14ecfc16055b5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "997979121770",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "n-priv-subnet1"
            },
            "tags_all": {
              "Name": "n-priv-subnet1"
            },
            "vpc_id": "vpc-091d4e6f12a0f6c1d"
          },
          "dependencies": [
            "module.vpc-iti.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.subnet-priv-2",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:997979121770:route-table/rtb-02de0633e83c5be84",
            "id": "rtb-02de0633e83c5be84",
            "owner_id": "997979121770",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-091deb8a239337163",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private-RT"
            },
            "tags_all": {
              "Name": "private-RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-091d4e6f12a0f6c1d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.gatways.aws_nat_gateway.nat_gateway",
            "module.vpc-iti.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.subnet-priv-2",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06ae5622896649051",
            "route_table_id": "rtb-02de0633e83c5be84",
            "subnet_id": "subnet-0bc0ac305c38768f6"
          },
          "dependencies": [
            "module.gatways.aws_eip.example",
            "module.gatways.aws_nat_gateway.nat_gateway",
            "module.subnet-priv-2.aws_route_table.private",
            "module.subnet-priv-2.aws_subnet.subnet-private",
            "module.subnet-pub-1.aws_subnet.myvpc_subnet",
            "module.vpc-iti.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.subnet-priv-2",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet-private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:997979121770:subnet/subnet-0bc0ac305c38768f6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bc0ac305c38768f6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "997979121770",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "n-priv-subnet2"
            },
            "tags_all": {
              "Name": "n-priv-subnet2"
            },
            "vpc_id": "vpc-091d4e6f12a0f6c1d"
          },
          "dependencies": [
            "module.vpc-iti.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.subnet-pub-1",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:997979121770:route-table/rtb-022e09b15bda92dc2",
            "id": "rtb-022e09b15bda92dc2",
            "owner_id": "997979121770",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-004a9787215f1219c",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public-RT"
            },
            "tags_all": {
              "Name": "public-RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-091d4e6f12a0f6c1d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.gatways.aws_internet_gateway.example",
            "module.vpc-iti.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.subnet-pub-1",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-018acb8385938a7d5",
            "route_table_id": "rtb-022e09b15bda92dc2",
            "subnet_id": "subnet-02963679913f9a1d3"
          },
          "dependencies": [
            "module.gatways.aws_internet_gateway.example",
            "module.subnet-pub-1.aws_route_table.public",
            "module.subnet-pub-1.aws_subnet.myvpc_subnet",
            "module.vpc-iti.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.subnet-pub-1",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "myvpc_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:997979121770:subnet/subnet-02963679913f9a1d3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02963679913f9a1d3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "997979121770",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "n-pub-subnet1"
            },
            "tags_all": {
              "Name": "n-pub-subnet1"
            },
            "vpc_id": "vpc-091d4e6f12a0f6c1d"
          },
          "dependencies": [
            "module.vpc-iti.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.subnet-pub-2",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:997979121770:route-table/rtb-07aeafa8f29078aa4",
            "id": "rtb-07aeafa8f29078aa4",
            "owner_id": "997979121770",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-004a9787215f1219c",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public-RT"
            },
            "tags_all": {
              "Name": "public-RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-091d4e6f12a0f6c1d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.gatways.aws_internet_gateway.example",
            "module.vpc-iti.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.subnet-pub-2",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07a07a6a8e0f911ab",
            "route_table_id": "rtb-07aeafa8f29078aa4",
            "subnet_id": "subnet-0756c12047dbb71b0"
          },
          "dependencies": [
            "module.gatways.aws_internet_gateway.example",
            "module.subnet-pub-2.aws_route_table.public",
            "module.subnet-pub-2.aws_subnet.myvpc_subnet",
            "module.vpc-iti.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.subnet-pub-2",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "myvpc_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:997979121770:subnet/subnet-0756c12047dbb71b0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0756c12047dbb71b0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "997979121770",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "n-pub-subnet2"
            },
            "tags_all": {
              "Name": "n-pub-subnet2"
            },
            "vpc_id": "vpc-091d4e6f12a0f6c1d"
          },
          "dependencies": [
            "module.vpc-iti.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-iti",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "myvpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:997979121770:vpc/vpc-091d4e6f12a0f6c1d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0c410a8bef9c6666e",
            "default_route_table_id": "rtb-05c942e6786668cb3",
            "default_security_group_id": "sg-03daa07918cd94254",
            "dhcp_options_id": "dopt-0ad15b676a354724e",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-091d4e6f12a0f6c1d",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-05c942e6786668cb3",
            "owner_id": "997979121770",
            "tags": {
              "Name": "vpc-iti"
            },
            "tags_all": {
              "Name": "vpc-iti"
            }
          }
        }
      ]
    }
  ]
}